// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> with all options matches its snapshot 1`] = `
<TextField
  autoAdjustHeight={false}
  borderless={false}
  className="y-base-text-field y-text-field CLASS y-text-field--with-prefix y-text-field--with-suffix"
  deferredValidationTime={200}
  disabled={true}
  errorMessage="ERROR MESSAGE"
  label="LABEL"
  multiline={false}
  onBeforeChange={[Function]}
  onBlur={[Function]}
  onChanged={[Function]}
  onFocus={[Function]}
  onGetErrorMessage={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onNotifyValidationResult={[Function]}
  placeholder="PLACEHOLDER"
  prefix="PREFIX"
  required={true}
  resizable={true}
  suffix="SUFFIX"
  underlined={true}
  validateOnFocusIn={false}
  validateOnFocusOut={false}
  validateOnLoad={true}
  value="VALUE"
/>
`;

exports[`<TextField /> with default options matches its snapshot 1`] = `
<TextField
  autoAdjustHeight={false}
  borderless={false}
  className="y-base-text-field y-text-field"
  deferredValidationTime={200}
  errorMessage=""
  multiline={false}
  onBeforeChange={[Function]}
  onChanged={[Function]}
  onGetErrorMessage={[Function]}
  onNotifyValidationResult={[Function]}
  resizable={true}
  underlined={false}
  validateOnFocusIn={false}
  validateOnFocusOut={false}
  validateOnLoad={true}
/>
`;
